syntax = "proto3";

option csharp_namespace = "MicroservicesFeed.Quotes.Pricing";

package Quotes.Pricing;

service PricingFeed {
  rpc GetSymbols(SymbolsRequest) returns (SymbolsResponse);
}

message SymbolsRequest {
}

message SymbolsResponse {
  repeated string symbols = 1;
}
